# hellorust

./: .gitignore  Cargo.toml  README.md  main.rs  post-token.lua  publickey-authx.pem
actix/: Dockerfile  docker-compose.yml
actix-oefen/: Cargo.toml
actix-oefen/sql/: add_user.sql
actix-oefen/src/: main.rs
actix-web/: .env  Dockerfile  clean-docker.sh  privatekey-authx.pkcs8
actix-web-jsonwebtoken/: Cargo.toml  Dockerfile  clean-docker.sh
actix-web-jsonwebtoken/src/: main.rs
actix-web-token-gen/: Cargo.toml  Dockerfile  clean-docker.sh  docker-compose.yml
actix-web-token-gen/src/: main.rs
actix-web-token-gen/src/auth/: claims.rs
actix-web/sql/: create_function.sql  select_user.sql
actix/src/: store.rs
akka-http/: build.sbt  rebuild-img.sh
akka-http/project/: plugins.sbt
akka-http/src/main/resources/: private.pem  simple-token.conf
akka-http/src/main/scala/com/example/: Config.scala  Main.scala
akka-http/src/main/scala/com/example/auth/: TestApp.scala  TokenCreator.scala
akka-http/src/main/scala/com/example/db/: DbQuery.scala  UserInfo.scala
akka-http/src/main/scala/com/example/route/: TokenRoute.scala
db/: create.sql  docker-compose.yml  init.sql  rm_docker.sh  run_db.sh
db/Docker/: init.sql
isolate-jsonwebtoken/: Cargo.toml
isolate-jsonwebtoken/src/: main.rs
isolate-jwtsimple/: Cargo.toml
isolate-jwtsimple/src/: main.rs
scripts/: gen_key_pair.sh
src/: main.rs  store.rs
src/routes/: health.rs  mod.rs  token.rs
src/types/: logon_request.rs  user.rs
token-gen/: Cargo.toml  README.md
token-gen/src/: lib.rs  main.rs
token-gen/src/auth/: claims.rs  config.rs  mod.rs  tokens.rs  user.rs
warp/: .env  docker-compose.yml
warp/db/: create.sql
warp/src/routes/: token.rs
warp/src/types/: mod.rs  token_response.rs
