[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]  }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio-cron-scheduler = "*"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }
uuid = { version = "1.2.2", features = ["v4"]}