[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]  }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.2.2", features = ["v4"]}
jwt-simple = { version = "0.11.2"}
chrono = "0.4.23"
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"
dotenv = "0.15.0"
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
openssl = { version = "0.10.32", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"