[package]
name = "isolate-jwtsimple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
derive_more = "0.99.17"
chrono = "0.4.23"
jwt-simple = { version = "0.11.2"}
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"

[build-dependencies]
platforms = "2.0.0"