[package]
name = "token-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.8"
derive_more = "0.99.17"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
hmac = "0.12"
sha2 = "0.10"
sha256 = "1.1"
base64 = "0.21"
hex = "0.4"

[build-dependencies]
platforms = "2.0.0"